  defined in inttypes.h instead of stdint.h on that platform.

- Issue #6373: Fixed a SystemError when encoding with the latin-1 codec and
  the 'surrogateescape' error handler, a string which contains unpaired
  surrogates.

C-API
-----

- Issue #6405: Remove duplicatet type declarations in descrobject.h.

- The code flags for old __future__ features are now available again.

Library
-------

- Issue #6431: Make Fraction type return NotImplemented when it doesn't
  know how to handle a comparison without loss of precision.  Also add
  correct handling of infinities and nans for comparisons with float.

- Issue #6415: Fixed warnings.warn sagfault on bad formatted string.

- Issue #6358: The exit status of a command started with os.popen() was
  reported differently than it did with python 2.x.

- Issue #6323: The pdb debugger did not exit when running a script with a
  syntax error.

- Issue #6369: Fix an RLE decompression bug in the binhex module.

- Issue #6344: Fixed a crash of mmap.read() when passed a negative argument.

Build
-----

- Issue 4601: 'make install' did not set the appropriate permissions on
  directories.

- Issue 5390: Add uninstall icon independent of whether file
  extensions are installed.

Test
----

- Fix a test in importlib.test.source.test_abc_loader that was incorrectly
  testing when a .pyc file lacked an code object bytecode.


What's New in Python 3.1?
=========================

*Release date: 27-June-2009*

Core and Builtins
-----------------

- Issue #6334: Fix bug in range length calculation for ranges with
  large arguments.

- Issue #6329: Fixed iteration for memoryview objects (it was being blocked
  because it wasn't recognized as a sequence).

Library
-------

- Issue #6314: logging.basicConfig() performs extra checks on the "level"
  argument.

- Issue #6274: Fixed possible file descriptors leak in subprocess.py

- Accessing io.StringIO.buffer now raises an AttributeError instead of
  io.UnsupportedOperation.
